# Hanoi

./: CMakeLists.txt  CMakeLists.txt~  README.md  nastawy_kamery
src/: CMakeLists.txt  CMakeLists.txt~  HanoiConfig.cmake.in
src/Components/: CMakeLists.txt  CMakeLists.txt~
src/Components/FindPiece/: CMakeLists.txt  CMakeLists.txt~  FindPiece.cpp  FindPiece.hpp
src/Components/RedDiskDetection/: CMakeLists.txt  CMakeLists.txt~  RedDiskDetection.cpp  RedDiskDetection.hpp
src/Components/RodsDetection/: CMakeLists.txt  CMakeLists.txt~  RodsDetection.cpp  RodsDetection.hpp
src/Types/: CMakeLists.txt
tasks/: CameraUndist2.xml  MainTask.xml  MainTask.xml~  OriginalView.xml  OriginalView.xml~
